<resources>
    <string name="app_name">AIGo! </string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="donation">Donation</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Aigo">AIGo! </string>
    <string name="tvRegister">Register</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="reTypePasswordHint">Re-type Password</string>
    <string name="phoneHint">Phone</string>
    <string name="addressHint">Address</string>
    <string name="birthDateHint">Birth Date</string>
    <string name="tvGender">Gender </string>
    <string name="rdbtnMale">Male</string>
    <string name="rdbtnFemale">Female</string>
    <string name="cbxTerm">Agree Term and Condition</string>
    <string name="btnRegister">Register</string>
    <string name="login">Login</string>
    <string name="lblRegister">Don\'t have account? Register here!</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="event_calendar">Event Calendar</string>
    <string name="forgot_pass">Forgot password? click here!</string>
    <string name="change_passw">Change Password</string>

    <string name="Smooch_activityConversation">Customer Service</string>

</resources>


