<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/Aigo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="558dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/roundedbackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegister"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/nameHint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText
                    android:id="@+id/etRetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/reTypePasswordHint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/phoneHint"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText

                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/addressHint"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <EditText
                    android:id="@+id/etBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableTint="@android:color/white"
                    android:ems="10"
                    android:foregroundTint="@android:color/white"
                    android:hint="@string/birthDateHint"
                    android:inputType="date"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tvGender"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/rdbtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:buttonTint="@android:color/white"
                        android:drawableTint="@android:color/white"
                        android:foregroundTint="@android:color/white"
                        android:text="@string/rdbtnMale"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white" />

                    <RadioButton
                        android:id="@+id/rdbtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/white"
                        android:buttonTint="@android:color/white"
                        android:drawableTint="@android:color/white"
                        android:foregroundTint="@android:color/white"
                        android:text="@string/rdbtnFemale"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|end"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/pbRegister"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:foregroundTint="@android:color/white"
                        android:indeterminateTint="@android:color/white"
                        android:max="9"
                        android:progress="0"
                        android:progressBackgroundTint="@android:color/white"
                        android:progressTint="@android:color/white"
                        android:secondaryProgressTint="@android:color/white" />

                    <CheckBox
                        android:id="@+id/cbxTerm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:backgroundTint="@android:color/white"
                        android:buttonTint="@android:color/white"
                        android:drawableTint="@android:color/white"
                        android:foregroundTint="@android:color/white"
                        android:text="@string/cbxTerm"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:text="@string/btnRegister" />
                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>